[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
actix = "0.13.0"
uuid = {version="0.8.2", features = ["serde", "v4"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"